syntax = "proto3";

option java_package = "org.onosproject.grpc.proto.dummy";

package dummy;

service DummyService {
    rpc SayHello (DummyMessageThatNoOneWouldReallyUse) returns (DummyMessageThatNoOneWouldReallyUse) {
    }
}

message DummyMessageThatNoOneWouldReallyUse {
}
